# wxwork-api

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TODO.md
.github/: copilot-instructions.md
src/: client.rs  config.rs  crypto.rs  error.rs  error_codes.rs  lib.rs  main.rs  rate_limit.rs  token.rs
src/api/: auth.rs  macros.rs  mod.rs
src/api/account_id/: mod.rs
src/api/advanced_feat/: mod.rs
src/api/agent/: mod.rs
src/api/alert/: mod.rs
src/api/approval/: mod.rs
src/api/calendar/: mod.rs
src/api/chat_archive/: mod.rs
src/api/checkin/: mod.rs
src/api/contacts/: department.rs  export_import.rs  member.rs  mod.rs  tag.rs
src/api/data_intel/: mod.rs
src/api/docs/: mod.rs
src/api/drive/: mod.rs
src/api/excontact/: mod.rs
src/api/hr/: mod.rs
src/api/identity/: mod.rs
src/api/interconnect/: mod.rs
src/api/invoice/: mod.rs
src/api/live/: mod.rs
src/api/mail/: mod.rs
src/api/material/: mod.rs
src/api/meeting/: mod.rs
src/api/meeting_room/: mod.rs
src/api/message/: group.rs  mod.rs  send.rs
src/api/miniprogram_pay/: mod.rs
src/api/payment/: mod.rs
src/api/phone/: mod.rs
src/api/report/: mod.rs
src/api/school/: mod.rs
src/api/security/: mod.rs
src/api/upstream/: mod.rs
src/api/wechat_cs/: mod.rs
src/types/: common.rs
tests/: test_auth_api.rs  test_client.rs  test_contacts_api.rs  test_mail_api.rs  test_message_api.rs
tests/common/: mod.rs
