[package]
name = "wxwork-api"
version = "0.1.0"
edition = "2021"
description = "企业微信（WeCom/WxWork）Server-Side API SDK"
license = "MIT"

[[bin]]
name = "wxwork"
path = "src/main.rs"

[lib]
name = "wxwork_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "socks", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
url = "2"
base64 = "0.22"
hex = "0.4"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
rand = "0.9"
bytes = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serde_json = "1"
